# lector

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
docs/: Makefile
docs/source/: conf.py  index.rst  quick.rst  reader.rst  types.rst
docs/source/_static/css/: custom.css
lector/: __init__.py  arrow.py  cli.py  encodings.py  log.py  pandas.py  preambles.py  utils.py
lector/csv/: __init__.py  abc.py  arrow.py  dialects.py  encodings.py  pandas.py  preambles.py
lector/inference/: __init__.py  cast.py  dates.py  lists.py  numbers.py  strings.py
lector/types/: __init__.py  abc.py  bools.py  cast.py  lists.py  numbers.py  pandas.py  regex.py  strings.py  timestamps.py
notebooks/: example.ipynb  usage.ipynb
recipe/: meta.yaml
test/: conftest.py  test_dialects.py  test_encoding.py  test_encodings.py  test_formats.py  test_preambles.py  test_reader.py  test_types.py  utils.py
