[metadata]
name = lector
version = attr: lector.__version__
description = A fast reader for messy CSV files and type inference.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/graphext/lector
author = Graphext
author_email = thomasb@hey.com
keywords =
    csv
    json
    parser
    reader
    type inference
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
project_urls =
    Source = https://github.com/graphext/lector

[options]
packages = find:
platforms = any
python_requires = >=3.8
install_requires =
    cchardet
    clevercsv
    pyarrow>=8.0.0
    rich
    typer

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    lector = lector.cli:CLI

[options.extras_require]
test =
    hypothesis
    hypothesis-csv
    pytest
    pytest-cov
docs =
    pydata-sphinx-theme<0.10
    sphinx
    sphinx-autoapi
    sphinx-autobuild
    sphinx-autodoc-typehints
dev =
    black
    flake8
    ipywidgets
    jupyter_contrib_nbextensions
    jupyter_nbextensions_configurator
    notebook
    pandas
    pre-commit
    lector[test]
    lector[docs]
