[metadata]
name = lector
version = attr: lector.__version__
description = A fast reader for messy CSV files and type inference.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/graphext/lector
author = Graphext
author_email = thomasb@hey.com
keywords =
    csv
    json
    parser
    reader
    type inference
license = Apache License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
project_urls =
    Source = https://github.com/graphext/lector

[options]
packages = find:
platforms = any
python_requires = >=3.8
install_requires =
    cchardet
    clevercsv<0.8.1
    msgspec
    pyarrow>=15.0.0
    pyarrow-hotfix
    rich
    tqdm
    typer

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    lector = lector.cli:CLI

[options.extras_require]
test =
    hypothesis
    pytest
    pytest-cov
docs =
    pydata-sphinx-theme<0.10
    sphinx
    sphinx-autoapi
    sphinx-autobuild
    sphinx-autodoc-typehints
dev =
    ipywidgets
    jupyter_contrib_nbextensions
    jupyter_nbextensions_configurator
    notebook
    pandas
    pre-commit
    ruff
    lector[test]
    lector[docs]
